that path thing...ugh

--- a/k8s/rethink/rethinkdb_pv.yaml
+++ b/k8s/rethink/rethinkdb_pv.yaml
@@ -53,8 +53,6 @@ spec:
       labels:
         app: master
     spec:
-      securityContext:
-        fsGroup: 1000
       containers:
       - name: proxy
         image: gcr.io/google_containers/kubectl-amd64:v1.5.2
@@ -64,12 +62,12 @@ spec:
       - name: master
         image: rethinkdb:2.3.5
         command: [ "rethinkdb" ]
-        args: [ "--bind", "all", "-d", "/var/rethinkdb_home" ]
+        args: [ "--bind", "all", "-d", "/data/rethinkdb_home/db" ]
         ports:
         - containerPort: 8080
         - containerPort: 28015
         volumeMounts:
-        - mountPath: /var/rethinkdb_home
+        - mountPath: /data/rethinkdb_home
           name: rethinkdb-home
         resources:
           limits:
@@ -78,6 +76,8 @@ spec:
           requests:
             cpu: 1000m
             memory: 8000Mi
+      securityContext:
+        fsGroup: 0
       volumes:
       - name: rethinkdb-home
         persistentVolumeClaim:
